--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <div class="container">
+        <div class="container" id="container">
                        
             <div class="container-informacoes">
                 <h1 class="calculadora">Calcularoda IMC</h1>
